--- a/src/templates/mcq.html
+++ b/src/templates/mcq.html
@@ -41,7 +41,7 @@ Jquery	https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js			 -->
         
     </div>
   {% endfor %}
-  <div id="prev"> <button type=submit value=submit class="btn btn-primary">Submit</button> </div>
+  <div class="btn-lg margin-top-50 text-center" id="submit"> <button type=submit value=submit class="btn btn-primary">Submit</button> </div>
 </form>
 
 
