--- a/src/templates/results.html
+++ b/src/templates/results.html
@@ -18,7 +18,7 @@
 			rel="stylesheet"
 		/>
 		<!-- Custom Style Sheet -->
-		<link rel="stylesheet" href="static/css/result-style.css" />
+		<link rel="stylesheet" href="/static/css/result-style.css" />
 		<title>Quiz App!</title>
 		<!-- <link rel="icon" type="image/png" href="brain/img/fav.png" /> -->
 
@@ -85,8 +85,7 @@
 
 
     </head>
-	<body onload="showResult({{percentage}}, {{correct_answers}})">
-	<!-- <body onload="showResult(80, 9)"> -->
+	<body onload="showResult({{percentage}}, {{correct_answers}})" background="bg-secondary">
 				
 
 		<div class="container box-shadow">
