--- a/src/templates/file_upload_t5.html
+++ b/src/templates/file_upload_t5.html
@@ -3,7 +3,7 @@
     <title>upload</title>  
 </head>  
 <body>  
-    <form action = "/success" method = "POST" enctype="multipart/form-data">  
+    <form action = "/success" method = "post" enctype="multipart/form-data">  
         <input type="file" name="file" />  
         <input type = "submit" value="Upload">  
     </form>  
