partly integrated t5 model, tried out sense2vec

--- a/src/templates/file_upload.html
+++ b/src/templates/file_upload.html
@@ -70,7 +70,7 @@
 
       <!-- This file input will automatically converted into "Bootstrap File Input" -->
       <!-- Iconic preview for thumbs and detailed preview for zoom -->
-     <form action = "/success" method = "post" enctype="multipart/form-data">
+     <form action = "/success" method = "POST" enctype="multipart/form-data">
 <!--        <input type="file" name="file" />-->
 <!--        <input type = "submit" value="Upload">-->
 
